--- a/Common/version.props
+++ b/Common/version.props
@@ -1,7 +1,10 @@
 <!-- This file may be overwritten by automation. Only values allowed here are VersionPrefix and VersionSuffix.  -->
 <Project>
-    <PropertyGroup>
-        <VersionPrefix>2.0.0-rtm-170201</VersionPrefix>
-        <VersionSuffix></VersionSuffix>
-    </PropertyGroup>
+  <Import Project="common.props" />
+  <Import Project="define.props" />
+
+  <PropertyGroup>
+    <VersionPrefix>2.0.0-rtm-170201</VersionPrefix>
+    <VersionSuffix></VersionSuffix>
+  </PropertyGroup>
 </Project>
