--- a/src/CuteAnt.Text.Encodings.Web/CuteAnt.Text.Encodings.Web.csproj
+++ b/src/CuteAnt.Text.Encodings.Web/CuteAnt.Text.Encodings.Web.csproj
@@ -23,12 +23,35 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\unicode8definedcharacters.bin" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="..\..\common\AssemblyVersion.cs" Link="Properties\AssemblyVersion.cs" />
     <Compile Include="..\..\common\CommonAssemblyInfo.cs" Link="Properties\CommonAssemblyInfo.cs" />
     <Compile Include="..\..\common\CommonVersionInfo.cs" Link="Properties\CommonVersionInfo.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\unicode8definedcharacters.bin" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CuteAnt.Extensions.Primitives\CuteAnt.Extensions.Primitives.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="SR.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SR.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="SR.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
