还是需要修改命名空间，xunit测试无法进行

--- a/src/System.Security.Claims/CuteAnt.Security.Claims.csproj
+++ b/src/System.Security.Claims/CuteAnt.Security.Claims.csproj
@@ -4,8 +4,8 @@
   
   <PropertyGroup>
     <TargetFrameworks>net40</TargetFrameworks>
-    <RootNamespace>System.Security.Claims</RootNamespace>
-    <AssemblyName>System.Security.Claims</AssemblyName>
+    <RootNamespace>CuteAnt.Security.Claims</RootNamespace>
+    <AssemblyName>CuteAnt.Security.Claims</AssemblyName>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
 
