System.Buffers-net40

--- a/test/CuteAnt.Text.RegularExpressions.Tests/CuteAnt.Text.RegularExpressions.Tests.csproj
+++ b/test/CuteAnt.Text.RegularExpressions.Tests/CuteAnt.Text.RegularExpressions.Tests.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\AssertExtensions.cs" Link="AssertExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
