--- a/src/CuteAnt.Extensions.Logging/Microsoft.Extensions.Logging.csproj
+++ b/src/CuteAnt.Extensions.Logging/Microsoft.Extensions.Logging.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Logging.Unofficial</PackageId>
-    <Title>Microsoft.Extensions.Logging-net40-fork</Title>
+    <Title>Microsoft.Extensions.Logging-net40-net451-fork</Title>
     <Description>Logging infrastructure default implementation for Microsoft.Extensions.Logging.</Description>
     <PackageTags>logging</PackageTags>
   </PropertyGroup>
