--- a/src/CuteAnt.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
+++ b/src/CuteAnt.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Primitives.Unofficial</PackageId>
-    <Title>Microsoft.Extensions.Primitives-net40-fork</Title>
+    <Title>Microsoft.Extensions.Primitives-net40-net451-fork</Title>
     <Description>Primitives shared by framework extensions.</Description>
     <PackageTags>primitives</PackageTags>
   </PropertyGroup>
