--- a/src/Microsoft.AspNetCore.JsonPatch/Microsoft.AspNetCore.JsonPatch.csproj
+++ b/src/Microsoft.AspNetCore.JsonPatch/Microsoft.AspNetCore.JsonPatch.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.AspNetCore.JsonPatch.Unofficial</PackageId>
-    <Title>Microsoft.AspNetCore.JsonPatch-net40-fork</Title>
+    <Title>Microsoft.AspNetCore.JsonPatch-net40-net451-fork</Title>
     <Description>ASP.NET Core support for JSON PATCH.</Description>
     <PackageTags>aspnetcore;json;jsonpatch</PackageTags>
   </PropertyGroup>
