--- a/src/Microsoft.Extensions.Configuration/Microsoft.Extensions.Configuration.csproj
+++ b/src/Microsoft.Extensions.Configuration/Microsoft.Extensions.Configuration.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Configuration.Unofficial</PackageId>
     <Description>Implementation of key-value pair based configuration for Microsoft.Extensions.Configuration. Includes the memory configuration provider.</Description>
-    <Title>Microsoft.Extensions.Configuration.Abstractions-net40-fork</Title>
+    <Title>Microsoft.Extensions.Configuration.Abstractions-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
