--- a/src/Microsoft.Extensions.FileProviders.Abstractions/Microsoft.Extensions.FileProviders.Abstractions.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Abstractions/Microsoft.Extensions.FileProviders.Abstractions.csproj
@@ -16,7 +16,7 @@ Commonly used types:
 Microsoft.Extensions.FileProviders.IDirectoryContents
 Microsoft.Extensions.FileProviders.IFileInfo
 Microsoft.Extensions.FileProviders.IFileProvider</Description>
-    <Title>Microsoft.Extensions.FileProviders.Abstractions-net40-fork</Title>
+    <Title>Microsoft.Extensions.FileProviders.Abstractions-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
   </PropertyGroup>
 
