--- a/src/Microsoft.Extensions.FileProviders.Embedded/Microsoft.Extensions.FileProviders.Embedded.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Embedded/Microsoft.Extensions.FileProviders.Embedded.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.FileProviders.Embedded.Unofficial</PackageId>
     <Description>File provider for files in embedded resources for Microsoft.Extensions.FileProviders.</Description>
-    <Title>Microsoft.Extensions.FileProviders.Embedded-net40-fork</Title>
+    <Title>Microsoft.Extensions.FileProviders.Embedded-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
   </PropertyGroup>
 
