--- a/src/Microsoft.Extensions.Options/Microsoft.Extensions.Options.csproj
+++ b/src/Microsoft.Extensions.Options/Microsoft.Extensions.Options.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Options.Unofficial</PackageId>
-    <Title>Microsoft.Extensions.Options-net40-fork</Title>
+    <Title>Microsoft.Extensions.Options-net40-net451-fork</Title>
     <Description>Provides a strongly typed way of specifying and accessing settings using dependency injection.</Description>
     <PackageTags>aspnetcore;options</PackageTags>
   </PropertyGroup>
