--- a/src/Microsoft.Extensions.Configuration.Binder/Microsoft.Extensions.Configuration.Binder.csproj
+++ b/src/Microsoft.Extensions.Configuration.Binder/Microsoft.Extensions.Configuration.Binder.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Configuration.Binder.Unofficial</PackageId>
     <Description>Functionality to bind an object to data in configuration providers for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Binder-net40-fork</Title>
+    <Title>Microsoft.Extensions.Configuration.Binder-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
