--- a/src/Microsoft.Extensions.Configuration.Ini/Microsoft.Extensions.Configuration.Ini.csproj
+++ b/src/Microsoft.Extensions.Configuration.Ini/Microsoft.Extensions.Configuration.Ini.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Configuration.Ini.Unofficial</PackageId>
     <Description>INI configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Ini-net40-fork</Title>
+    <Title>Microsoft.Extensions.Configuration.Ini-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
