--- a/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
+++ b/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.Configuration.Xml.Unofficial</PackageId>
     <Description>XML configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Xml-net40-fork</Title>
+    <Title>Microsoft.Extensions.Configuration.Xml-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
