--- a/src/Microsoft.Extensions.FileProviders.Composite/Microsoft.Extensions.FileProviders.Composite.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Composite/Microsoft.Extensions.FileProviders.Composite.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.FileProviders.Composite.Unofficial</PackageId>
     <Description>Composite file and directory providers for Microsoft.Extensions.FileProviders.</Description>
-    <Title>Microsoft.Extensions.FileProviders.Composite-net40-fork</Title>
+    <Title>Microsoft.Extensions.FileProviders.Composite-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
   </PropertyGroup>
 
