--- a/src/Microsoft.Extensions.FileProviders.Physical/Microsoft.Extensions.FileProviders.Physical.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Physical/Microsoft.Extensions.FileProviders.Physical.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.FileProviders.Physical.Unofficial</PackageId>
     <Description>File provider for physical files for Microsoft.Extensions.FileProviders.</Description>
-    <Title>Microsoft.Extensions.FileProviders.Physical-net40-fork</Title>
+    <Title>Microsoft.Extensions.FileProviders.Physical-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
   </PropertyGroup>
 
