--- a/src/Microsoft.Extensions.ObjectPool/Microsoft.Extensions.ObjectPool.csproj
+++ b/src/Microsoft.Extensions.ObjectPool/Microsoft.Extensions.ObjectPool.csproj
@@ -10,7 +10,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Microsoft.Extensions.ObjectPool.Unofficial</PackageId>
-    <Title>Microsoft.Extensions.ObjectPool-net40-fork</Title>
+    <Title>Microsoft.Extensions.ObjectPool-net40-net451-fork</Title>
     <Description>A simple object pool implementation.</Description>
     <PackageTags>pooling</PackageTags>
   </PropertyGroup>
