nuget.org 已经为 ms 保留了关键字

--- a/src/CuteAnt.Extensions.DependencyInjection.Abstractions/Microsoft.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/CuteAnt.Extensions.DependencyInjection.Abstractions/Microsoft.Extensions.DependencyInjection.Abstractions.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.DependencyInjection.Abstractions.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.DependencyInjection.Abstractions</PackageId>
     <Title>Microsoft.Extensions.DependencyInjection.Abstractions-net40-net451-fork</Title>
     <Description>Abstractions for dependency injection.
 Commonly used types:
