--- a/src/Microsoft.Extensions.Configuration.FileExtensions/Microsoft.Extensions.Configuration.FileExtensions.csproj
+++ b/src/Microsoft.Extensions.Configuration.FileExtensions/Microsoft.Extensions.Configuration.FileExtensions.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.Configuration.FileExtensions.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.Configuration.FileExtensions</PackageId>
     <Description>Extension methods for configuring file-based configuration providers for Microsoft.Extensions.Configuration.</Description>
     <Title>Microsoft.Extensions.Configuration.FileExtensions-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
