--- a/src/Microsoft.Extensions.Configuration.Json/Microsoft.Extensions.Configuration.Json.csproj
+++ b/src/Microsoft.Extensions.Configuration.Json/Microsoft.Extensions.Configuration.Json.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.Configuration.Json.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.Configuration.Json</PackageId>
     <Description>JSON configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
     <Title>Microsoft.Extensions.Configuration.Json-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
