--- a/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
+++ b/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.Configuration.Xml.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.Configuration.Xml</PackageId>
     <Description>XML configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
     <Title>Microsoft.Extensions.Configuration.Xml-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
