--- a/src/Microsoft.Extensions.FileProviders.Composite/Microsoft.Extensions.FileProviders.Composite.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Composite/Microsoft.Extensions.FileProviders.Composite.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.FileProviders.Composite.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.FileProviders.Composite</PackageId>
     <Description>Composite file and directory providers for Microsoft.Extensions.FileProviders.</Description>
     <Title>Microsoft.Extensions.FileProviders.Composite-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
