--- a/src/Microsoft.Extensions.FileProviders.Physical/Microsoft.Extensions.FileProviders.Physical.csproj
+++ b/src/Microsoft.Extensions.FileProviders.Physical/Microsoft.Extensions.FileProviders.Physical.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.FileProviders.Physical.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.FileProviders.Physical</PackageId>
     <Description>File provider for physical files for Microsoft.Extensions.FileProviders.</Description>
     <Title>Microsoft.Extensions.FileProviders.Physical-net40-net451-fork</Title>
     <PackageTags>files;filesystem</PackageTags>
