--- a/src/Microsoft.Extensions.FileSystemGlobbing/Microsoft.Extensions.FileSystemGlobbing.csproj
+++ b/src/Microsoft.Extensions.FileSystemGlobbing/Microsoft.Extensions.FileSystemGlobbing.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>Microsoft.Extensions.FileSystemGlobbing.Unofficial</PackageId>
+    <PackageId>CuteAnt.Extensions.FileSystemGlobbing</PackageId>
     <Description>File system globbing to find files matching a specified pattern.</Description>
     <Title>Microsoft.Extensions.FileSystemGlobbing-net40-net451-fork</Title>
     <PackageTags>files;filesystem;glob;globbing</PackageTags>
