System.* 名称被禁用

--- a/src/System.Buffers/System.Buffers.csproj
+++ b/src/System.Buffers/System.Buffers.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>System.Buffers.Net40</PackageId>
+    <PackageId>Net40.Buffers</PackageId>
     <Title>System.Buffers-net40-fork</Title>
     <Description>Provides resource pooling of any type for performance-critical applications that allocate and deallocate objects frequently.</Description>
     <PackageTags>buffer</PackageTags>
