--- a/src/System.Reflection.Metadata/System.Reflection.Metadata.csproj
+++ b/src/System.Reflection.Metadata/System.Reflection.Metadata.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <PackageId>System.Reflection.Metadata.Net40</PackageId>
+    <PackageId>Net40.Reflection.Metadata</PackageId>
     <Title>System.Reflection.Metadata-net40-fork</Title>
     <Description>Provides the System.Text.RegularExpressions.Regex class, an implementation of a regular expression engine.</Description>
     <PackageTags>Regular</PackageTags>
