--- a/src/Microsoft.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
+++ b/src/Microsoft.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
@@ -33,6 +33,6 @@
   </ItemGroup>
   
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' or  '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.4.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="$(SystemRuntimeCompilerServicesUnsafeVersion)" />
   </ItemGroup>
 </Project>
