移除版权信息

--- a/src/Microsoft.AspNetCore.JsonPatch/Microsoft.AspNetCore.JsonPatch.csproj
+++ b/src/Microsoft.AspNetCore.JsonPatch/Microsoft.AspNetCore.JsonPatch.csproj
@@ -14,7 +14,7 @@
     <PackageId>NetFx.AspNetCore.JsonPatch</PackageId>
     <Title>Microsoft.AspNetCore.JsonPatch-net40-net451-fork</Title>
     <Description>ASP.NET Core support for JSON PATCH.</Description>
-    <PackageTags>aspnetcore;json;jsonpatch</PackageTags>
+    <PackageTags>json;jsonpatch</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
