--- a/src/nuget.aspnet.props
+++ b/src/nuget.aspnet.props
@@ -1,16 +1,9 @@
 <Project>
   <!-- Set common properties regarding assembly information and nuget packages -->
   <PropertyGroup>
-    <Authors>Microsoft, Seabiscuit</Authors>
-    <Company>Microsoft</Company>
-    <Product>aspnet</Product>
-    <Copyright>Copyright © Microsoft, dotnetframework</Copyright>
-    <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288859</PackageIconUrl>
-    <PackageProjectUrl>http://github.com/aspnet</PackageProjectUrl>
-    <PackageLicenseUrl>http://go.microsoft.com/fwlink/?LinkId=329770</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/cuteant/CuteAnt.Extensions</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>http://github.com/aspnet</RepositoryUrl>
+    <RepositoryUrl>https://github.com/cuteant/CuteAnt.Extensions.git</RepositoryUrl>
     <NeutralLanguage>en-US</NeutralLanguage>
     <IncludeSymbols>false</IncludeSymbols>
     <IncludeSource>false</IncludeSource>
